# charmina

./: .env_example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
charmina/: __main__.py  charmina.config.yml  config.prompts.yml  config.py  config.templates.yml
charmina/cli/: cli.py  cli_projects.py  cli_runners.py  cli_utils.py
charmina/libs/: enums.py  helpers.py  logging_setup.py  podcast_downloader.py  youtube_downloader.py
charmina/modules/dataclasses/: __init__.py  metadata.py  transform_config.py  transformation.py
charmina/modules/extract/: extract_runner.py
charmina/modules/extract/meta_extractors/: __init__.py  default_meta_extractor.py  mp3_meta_extractor.py
charmina/modules/llm/: llm.py
charmina/modules/scribe/: scribe_runner.py
charmina/modules/scribe/scribers/: __init__.py  jinja_scriber.py
charmina/modules/transform/: transform_runner.py
charmina/modules/transform/transformers/: __init__.py  bypass_transformer.py  mp3_transformer.py  pdf_transformer.py
